[package]
name = "femto"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz@confio.gmbh>"]
description = "Test suites for cw-multi-test"
repository = "https://github.com/DariuszDepta/femto"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
v1 = []
v2 = []

[dependencies]
cosmwasm-std = "2.0.0"
cw-multi-test = "2.0.0-rc.0"
cw-storage-plus = "2.0.0-rc.0"
cw-utils = "2.0.0-rc.0"
schemars = "0.8"
serde = "1.0"







