[package]
name = "femto"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz@confio.gmbh>"]
description = "Test suites for cw-multi-test"
repository = "https://github.com/DariuszDepta/femto"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["v_2"]
v_0_1_1 = []
v_0_1_2 = []
v_0_1_3 = []
v_0_1_4 = []
v_1_1_1 = []
v_1_1_2 = []
v_1_1_3 = []
v_1_1_4 = []
v_2 = []

[dependencies]
cosmwasm-std = "2.0.0"
cw-storage-plus = "2.0.0-rc.0"
cw-utils = "2.0.0-rc.0"
schemars = "0.8.16"
serde = "1.0.197"

[dev-dependencies]
cw-multi-test = "2.0.0-rc.0"
